# llm-engineering

./: pyproject.toml
meet/: groq.ipynb  meet.ipynb  meeting.ipynb
week1/: app.py  brochure.py  first_api_call.py  scraper.py  tokenizer.py
week2/: astro.ipynb  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb
week3/: colab.py
week4/: day3.ipynb
week5/: Day1.ipynb  Day2.ipynb  Day3.ipynb  app.py  practice.ipynb
