[project]
name = "llmengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "gradio>=6.9.0",
    "groq>=1.1.2",
    "langchain>=0.3.28",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "numpy==1.26.4",
    "openai>=2.29.0",
    "plotly>=6.6.0",
    "pvrecorder>=1.2.7",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.3.0",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tiktoken>=0.12.0",
]
